[gd_scene load_steps=8 format=2]

[ext_resource path="res://Volcano/openfulllavachest.png" type="Texture" id=1]
[ext_resource path="res://Volcano/openlavachest.png" type="Texture" id=2]
[ext_resource path="res://Volcano/closedlavachest.png" type="Texture" id=3]
[ext_resource path="res://Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Volcano/EarthChest.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 22.1385

[sub_resource type="CircleShape2D" id=2]
radius = 19.2686

[node name="EarthChest" type="Node2D"]
script = ExtResource( 5 )

[node name="Closedlavachest" type="Sprite" parent="."]
position = Vector2( 33, 21 )
texture = ExtResource( 3 )

[node name="Openfulllavachest" type="Sprite" parent="."]
visible = false
position = Vector2( 33, 21 )
texture = ExtResource( 1 )

[node name="Openlavachest" type="Sprite" parent="."]
visible = false
position = Vector2( 33, 21 )
texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( 46.3934, 27.5546, 48.2247, 30.3615, 46.3044, 32.8777, 43.3246, 32.1493, 19.4205, 32.348, 18.2948, 28.1763, 19.9502, 26.1899, 20.6124, 13.2114, 24.6516, 8.11277, 42.5963, 8.31142, 46.6355, 12.9466 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 33.4087, 20.9361 )
shape = SubResource( 1 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
position = Vector2( 2.51389, 37.0185 )
collision_layer = 128
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 30.9587, -15.5907 )
shape = SubResource( 2 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 34.7322
margin_top = 7.29747
margin_right = 132.732
margin_bottom = 21.2975
rect_scale = Vector2( 0.5, 0.5 )
text = "Attack To Open"

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Hurtbox"]
